--- a/package.json
+++ b/package.json
@@ -5,7 +5,20 @@
   "repository": "https://github.com/Augusto9237/api-waiter-app.git",
   "author": "Augusto.9237 <augusto.souza8330@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "build": "tsc",
+    "dev": "nodemon src/index.ts"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.14",
+    "@typescript-eslint/eslint-plugin": "^5.45.0",
+    "@typescript-eslint/parser": "^5.45.0",
+    "eslint": "^8.29.0",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
   }
 }
