--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
