--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "nodemon src/index.ts"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.14",
     "@types/multer": "^1.4.7",
     "@typescript-eslint/eslint-plugin": "^5.45.0",
@@ -20,8 +21,11 @@
     "typescript": "^4.9.3"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.7.5",
     "multer": "^1.4.5-lts.1",
     "socket.io": "^4.5.4"
